@@ -1405,6 +1405,12 @@ obj->book_mode()
     runes will be translated to normal runes.
     **** END SI SPECIFIC ****
 
+UI_book_mode_ex(bool is_scroll, int font)                                       
+
+    Used to display books and scrolls; displays a book gump if 'show_loc' is
+    'false' or a scroll shape if it is 'true'. The font shape in 'FONTS.VGA'
+    used to render the text is specified in 'font'.
+
 UI_close_gumps()
 
     Closes all gumps.
@@ -1426,6 +1432,11 @@ UI_si_display_map(int num)                                                  [SI]
 
     Displays a map on screen specified by 'num'. Currently, the association
     between map <> 'num' is hard-coded.
+
+UI_display_map_ex(int mapshp, bool show_loc)                                    
+
+    Displays the sprite shape 'mapshp' centered in the screen. If 'show_loc' is
+    'true', Exult will also display a location mark in the map.
 
 UI_lightning()                                                              [BG]
 
