@@ -31,8 +31,8 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
 Scroll_gump::Scroll_gump
 	(
-	bool serp
-	) : Text_gump(game->get_shape("gumps/scroll"), serp)
+	int fnt
+	) : Text_gump(game->get_shape("gumps/scroll"), fnt)
 {  
 }
 
