@@ -212,8 +212,8 @@
 	USECODE_INTRINSIC_PTR(set_camera),	// 0xbc
 	USECODE_INTRINSIC_PTR(set_polymorph),	// 0xbd
 	USECODE_INTRINSIC_PTR(infravision),	// 0xbe
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xbf
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xc0
+	USECODE_INTRINSIC_PTR(display_map_ex),	// 0xbf (Exult)
+	USECODE_INTRINSIC_PTR(book_mode_ex),	// 0xc0 (Exult)
 	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xc1
 	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xc2
 	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xc3
