@@ -365,6 +365,8 @@ class Usecode_internal : public Usecode_machine
 	USECODE_INTRINSIC_DECL(begin_casting_mode);
 	USECODE_INTRINSIC_DECL(get_usecode_fun);
 	USECODE_INTRINSIC_DECL(get_map_num);
+	USECODE_INTRINSIC_DECL(display_map_ex);
+	USECODE_INTRINSIC_DECL(book_mode_ex);
 	
 	/*
 	 *	Other private methods:
